2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* ElevationGrid.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Coordinate.cpp:
	* CoordinateDouble.cpp:
	* IndexedFaceSet.h:
	* GeoCoordinate.cpp:
	* X3DGeometryNode.cpp:
	* IndexedFaceSet.cpp: 

2014-11-17  Holger Seelig  <holger.seelig@yahoo.de>

	* IndexedFaceSet.cpp: 

2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Shape.cpp:
	* Hit.cpp:
	* TouchSensor.cpp: 

2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Browser.h:
	* Browser.cpp:
	* LookAtViewer.h:
	* PlaneViewer.cpp:
	* LookAtViewer.cpp:
	* X3DFlyViewer.cpp:
	* ExamineViewer.cpp:
	* SelectorType.h:
	* PointingDevice.h:
	* LassoSelection.h:
	* PointingDevice.cpp:
	* LassoSelection.cpp:
	* X3DPointingDeviceSensorContext.h:
	* X3DPointingDeviceSensorContext.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Tessellator.h:
	* Extrusion.cpp:
	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp:
	* LassoSelection.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Tessellator.h:
	* Extrusion.h:
	* Extrusion.cpp:
	* Coordinate.cpp:
	* CoordinateDouble.cpp:
	* GeoCoordinate.cpp:
	* X3DCoordinateNode.h:
	* IndexedFaceSet.cpp:
	* LassoSelection.h:
	* LassoSelection.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DFlyViewer.cpp:
	* LassoSelection.h:
	* LassoSelection.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Browser.h:
	* Browser.cpp:
	* NoneViewer.h:
	* LookAtViewer.h:
	* X3DFlyViewer.cpp:
	* Hit.cpp:
	* X3DSelector.h:
	* X3DViewpointNode.cpp:
	* SelectorType.h:
	* X3DSelector.cpp:
	* LassoSelection.h:
	* LassoSelection.cpp: 

2014-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* Viewpoint.h:
	* LookAtViewer.cpp:
	* Viewpoint.cpp:
	* GeoViewpoint.h:
	* OrthoViewpoint.h:
	* GeoViewpoint.cpp:
	* OrthoViewpoint.cpp:
	* X3DViewpointNode.h:
	* X3DViewpointNode.cpp: 

2014-11-14  Holger Seelig  <holger.seelig@yahoo.de>
